# ros2_dev_example

./: .gitignore  .mcp.json  CLAUDE.md  README.md  colcon_defaults.yaml
.claude/: settings.json  settings.local.json
.claude/hooks/: format-cpp.sh  guard-workspace-clean.sh
.claude/skills/launch/: SKILL.md
.claude/skills/msg/: SKILL.md
.claude/skills/new-node/: SKILL.md
.claude/skills/new-package/: SKILL.md
.claude/skills/new-package/templates/: CMakeLists_combined.txt  CMakeLists_cpp.txt  package_xml_combined.xml  package_xml_cpp.xml  package_xml_python.xml  setup_py.py
.claude/skills/test/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: gpu_migration.md
src/hello_world/: package.xml  setup.py
src/hello_world/hello_world/: hello_node.py
src/hello_world_combined/: CMakeLists.txt  package.xml
src/hello_world_combined/hello_world_combined/: hello_node.py
src/hello_world_combined/scripts/: hello_node_py
src/hello_world_combined/src/: hello_node.cpp
src/hello_world_cpp/: CMakeLists.txt  package.xml
src/hello_world_cpp/src/: hello_node.cpp
src/ml_inference/: package.xml  setup.cfg  setup.py
src/ml_inference/ml_inference/: coco_labels.py  detector_node.py  test_image_publisher.py
